# yafu-setup-package

./: .gitmodules  Makefile  README.md
ecm-6.4.4/: AUTHORS  ChangeLog  Fgw.c  INSTALL-ecm  Makefile.am  Makefile.in  NEWS  README  README.lib  TODO  acinclude.m4  aclocal.m4  auxarith.c  auxi.c  auxlib.c  b1_ainc.c  batch.c  bench_mulredc.c  bestd.c  candi.c  champions.h  config.h.in  configure  configure.in  ecm-ecm.h  ecm-gmp.h  ecm-impl.h  ecm-params.h.alpha-ev5  ecm-params.h.alpha-ev56  ecm-params.h.alpha-ev6  ecm-params.h.armv5tel  ecm-params.h.athlon64  ecm-params.h.core2  ecm-params.h.corei5  ecm-params.h.hppa2.0  ecm-params.h.ia64  ecm-params.h.mips64el  ecm-params.h.pentium-m  ecm-params.h.pentium3  ecm-params.h.pentium4  (+50 more)
ecm-6.4.4/athlon/: Makefile.am  Makefile.in  README  autogen.py  generate_all  mulredc.h  mulredc1.asm  mulredc10.asm  mulredc11.asm  mulredc12.asm  mulredc13.asm  mulredc14.asm  mulredc15.asm  mulredc16.asm  mulredc17.asm  mulredc18.asm  mulredc19.asm  mulredc2.asm  mulredc20.asm  mulredc3.asm  mulredc4.asm  mulredc5.asm  mulredc6.asm  mulredc7.asm  mulredc8.asm  mulredc9.asm
ecm-6.4.4/build.vc10/: Makefile.am  Makefile.in  config.h  ecm-params.h  ecm-params.h.win32.amd  ecm-params.h.win32.intel  ecm-params.h.x64.amd  ecm-params.h.x64.intel  ecm.sln  file_copy.bat  getrusage.h  mp_lib.props  mul_fft-params.h.win32.intel  mul_fft-params.h.x64.intel  readme.txt  tests.py  vsyasm.props
ecm-6.4.4/build.vc10/assembler/: Makefile.am  Makefile.in  a_win32a_mulredc.asm  a_win32a_redc.asm  a_win32p_mulredc.asm  a_win32p_redc.asm  a_x64_mulredc.asm  a_x64_redc.asm  mulredc.asm  mulredc.h  redc.asm  test_mulredc.c
ecm-6.4.4/build.vc10/bench_mulredc/: Makefile.am  Makefile.in  bench_mulredc.vcxproj  bench_mulredc.vcxproj.filters
ecm-6.4.4/build.vc10/ecm/: Makefile.am  Makefile.in  ecm.vcxproj  ecm.vcxproj.filters
ecm-6.4.4/build.vc10/libecm/: Makefile.am  Makefile.in  libecm.vcxproj  libecm.vcxproj.filters
ecm-6.4.4/build.vc10/tune/: Makefile.am  Makefile.in  tune.vcxproj  tune.vcxproj.filters
ecm-6.4.4/pentium4/: Makefile.am  Makefile.dev  Makefile.in  README  autogen.py  mulredc10.asm  mulredc11.asm  mulredc12.asm  mulredc13.asm  mulredc14.asm  mulredc15.asm  mulredc16.asm  mulredc17.asm  mulredc18.asm  mulredc19.asm  mulredc2.asm  mulredc20.asm  mulredc3.asm  mulredc4.asm  mulredc5.asm  mulredc6.asm  mulredc7.asm  mulredc8.asm  mulredc9.asm  redc.asm
ecm-6.4.4/powerpc64/: Makefile.am  Makefile.dev  Makefile.in  README  generate_all  mulredc.m4  mulredc1.asm  mulredc10.asm  mulredc11.asm  mulredc12.asm  mulredc13.asm  mulredc14.asm  mulredc15.asm  mulredc16.asm  mulredc17.asm  mulredc18.asm  mulredc19.asm  mulredc2.asm  mulredc20.asm  mulredc3.asm  mulredc4.asm  mulredc5.asm  mulredc6.asm  mulredc7.asm  mulredc8.asm  mulredc9.asm  mulredc_1_2.m4  powerpc-defs.m4  redc.asm
ecm-6.4.4/x86_64/: Makefile.am  Makefile.in  README  autogen.py  generate_all  mulredc.h  mulredc.m4  mulredc1.asm  mulredc1.m4  mulredc10.asm  mulredc11.asm  mulredc12.asm  mulredc13.asm  mulredc14.asm  mulredc15.asm  mulredc16.asm  mulredc17.asm  mulredc18.asm  mulredc19.asm  mulredc1_10.asm  mulredc1_11.asm  mulredc1_12.asm  mulredc1_13.asm  mulredc1_14.asm  mulredc1_15.asm  mulredc1_16.asm  mulredc1_17.asm  mulredc1_18.asm  mulredc1_19.asm  mulredc1_2.asm  mulredc1_20.asm  mulredc1_3.asm  mulredc1_4.asm  mulredc1_5.asm  mulredc1_6.asm  mulredc1_7.asm  mulredc1_8.asm  mulredc1_9.asm  mulredc2.asm  mulredc20.asm  (+7 more)
lasieve_bin/: gnfs-lasieve4I11e  gnfs-lasieve4I12e  gnfs-lasieve4I13e  gnfs-lasieve4I14e  gnfs-lasieve4I15e  gnfs-lasieve4I16e
msieve-1.52/: Makefile
msieve-1.52/b40c/: sort_engine.cu
msieve-1.52/build.cuda.vc10/msieve/: msieve.vcxproj  msieve.vcxproj.filters
msieve-1.52/build.cuda.vc11/common/: common.vcxproj  common.vcxproj.filters
msieve-1.52/build.cuda.vc11/gnfs/: gnfs.vcxproj
msieve-1.52/build.cuda.vc11/msieve/: msieve.vcxproj  msieve.vcxproj.filters
msieve-1.52/build.cuda.vc11/sort_engine_sm11/: sort_engine_sm11.vcxproj
msieve-1.52/build.cuda.vc11/sort_engine_sm13/: sort_engine_sm13.vcxproj
msieve-1.52/build.cuda.vc11/sort_engine_sm20/: sort_engine_sm20.vcxproj
msieve-1.52/build.cuda.vc11/stage1_core_sm11/: stage1_core_sm11.vcxproj
msieve-1.52/build.cuda.vc11/stage1_core_sm13/: stage1_core_sm13.vcxproj
msieve-1.52/build.cuda.vc11/stage1_core_sm20/: stage1_core_sm20.vcxproj
msieve-1.52/build.vc10/msieve/: msieve.vcxproj
msieve-1.52/build.vc11/common/: common.vcxproj  common.vcxproj.filters
msieve-1.52/build.vc11/msieve/: msieve.vcxproj  msieve.vcxproj.filters
msieve-1.52/common/: driver.c
msieve-1.52/gnfs/: gnfs.h  relation.c
yafu-1.34.3/: CHANGES  Makefile  Makefile.mingw  make_all-mingw.sh  make_all.sh  yafu.ini
yafu-1.34.3/arith/: arith0.c  arith1.c  arith2.c  arith3.c  mod32.asm  mod64.asm  monty.c
yafu-1.34.3/arith/tfm/: fp_2expt.c  fp_cmp_mag.c  fp_mont_small.c  fp_montgomery_calc_normalization.c  fp_montgomery_reduce.c  fp_montgomery_setup.c  fp_mul_2.c  fp_mul_comba.c  fp_mul_comba_small_set.c  fp_sqr_comba.c  fp_sqr_comba_generic.c  fp_sqr_comba_small_set.c  s_fp_sub.c
yafu-1.34.3/build.vc10/: add.express.py  remove.express.py  vsyasm.props  yafu.sln
yafu-1.34.3/build.vc10/yafu/: yafu.vcxproj  yafu.vcxproj.filters
yafu-1.34.3/build.vc9/: gmp_ecm_config.props  gmp_ecm_config.vsprops  no_gmp_ecm_config.props  yafu.ini  yafu.plg  yafu.sln
yafu-1.34.3/build.vc9/yafu-32k/: yafu-32k.vcproj
yafu-1.34.3/build.vc9/yafu-64k/: yafu-64k.vcproj
yafu-1.34.3/factor/: factor_common.c  rho.c  squfof.c  trialdiv.c  tune.c
yafu-1.34.3/factor/gmp-ecm/: ecm.c  pm1.c  pp1.c
yafu-1.34.3/factor/nfs/: nfs.c  nfs_filemanip.c  nfs_poly.c  nfs_postproc.c  nfs_sieving.c  nfs_threading.c  snfs.c  winsupport.c
yafu-1.34.3/factor/qs/: SIQS.c  filter.c  (+35 more)
yafu-1.34.3/include/: arith.h  calc.h  common.h  factor.h  lanczos.h  monty.h  mpz_prp_prime.h  msieve.h  nfs.h  qs.h  soe.h  tfm.h  types.h  util.h  yafu.h  yafu_ecm.h  yafu_stack.h  yafu_string.h
yafu-1.34.3/top/: calc.c  driver.c  mpz_prp_prime.c  stack.c  test.c  utils.c
(+19 files in other folders)
