EXTRA_DIST = config.h ecm-params.h ecm-params.h.win32.amd  \
             ecm-params.h.win32.intel ecm-params.h.x64.amd \
             ecm-params.h.x64.intel ecm.sln file_copy.bat \
             mp_lib.props mul_fft-params.h.win32.amd \
             mul_fft-params.h.win32.intel mul_fft-params.h.x64.amd \
             mul_fft-params.h.x64.intel readme.txt tests.py \
             vsyasm.props vsyasm.targets vsyasm.xml getrusage.h

DIST_SUBDIRS = assembler ecm libecm tune bench_mulredc
